# tenshi-no-hana

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.ja.md  README.md  build.rs  memory.x  rust-toolchain.toml  wifi_config.json.example
.cargo/: config.toml
.claude/: microros_handoff.md  runtime_design.md  runtime_roadmap.md  serialization.md  xrce_dds_protocol.md
.devcontainer/: devcontainer.json
.docker/: Dockerfile  Dockerfile.ros2  compose.yaml  entrypoint.sh
.github/: copilot-instructions.md
.github/instructions/: esp-hosted-mcu.instructions.md  protobuf.instructions.md
cad/tenshi_no_hana/: tenshi_no_hana.kicad_prl  tenshi_no_hana.kicad_pro  tenshi_no_hana.kicad_sch
docs/: DESIGN.md
examples/: CLAUDE.md  adc_read.rs  blinky.rs  embassy_blinky.rs  embassy_button.rs  embassy_multitask.rs  esp_hosted_spi_test.rs  i2c_scan.rs  microros_hello.rs  microros_subscriber.rs  multicore.rs  pwm_led.rs  sensor_read.rs  uart_echo.rs  wifi_microros_sensors.rs  wifi_zenoh_chatter.rs  wifi_zenoh_sensors.rs
scripts/: setup_portproxy.ps1
src/: wifi_config.rs
tests/: example_test.rs
