[package]
name = "tenshi-no-hana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["hal-rt"]
hal-rt = ["rp2040-hal/rt"]
embassy = [
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-rp",
    "dep:embassy-sync",
]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.5", features = ["unproven"] }
defmt = "1.0"
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }
rp2040-hal = { version = "0.12", features = ["critical-section-impl"] }
rp2040-boot2 = "0.3"
critical-section = "1.2"
fugit = "0.3"

# Embassy dependencies (optional, enabled via "embassy" feature)
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "defmt"], optional = true }
embassy-time = { version = "0.5", features = ["defmt"], optional = true }
embassy-rp = { version = "0.10", features = ["defmt", "rp2040", "time-driver", "critical-section-impl", "boot2-generic-03h"], optional = true }
embassy-sync = { version = "0.8", features = ["defmt"], optional = true }

[dev-dependencies]
defmt-test = "0.4"

[[test]]
name = "example_test"
harness = false

# Embassy examples (require "embassy" feature)
[[example]]
name = "embassy_blinky"
required-features = ["embassy"]

[[example]]
name = "embassy_button"
required-features = ["embassy"]

[[example]]
name = "embassy_multitask"
required-features = ["embassy"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
